# MusicAnalysis-Work

./: .coverage  .env.example  .gitignore  .pre-commit-config.yaml  MusicAnalysis-Start.ps1  MusicAnalysis-Stop.ps1  README.md  app.py  clear.json  daemon.py  generate_docs.py  generate_docs_v2.py  generate_docs_v3.py  hot_songs.csv  index.html  install_autostart.bat  lt_client.py  music_analysis.py  overview.md  public_url.txt  pyproject.toml  requirements.txt  scrape_v2.json  scrape_v3.json  scrape_v4.json  start.bat  start_simple.bat  start_tunnel.bat  stop.bat  stop_simple.bat  原创榜.csv  新歌榜.csv  飙升榜.csv
artifacts/: README.md
data/: README.md
data/samples/: 原创榜.csv  新歌榜.csv  飙升榜.csv
docs/: README.md
docs/coursework/: 答辩问答指南.md
docs/guides/: technical-improvement.md
docs/integrations/: spotify.md
scripts/: deploy_shortcuts.ps1  run_bat_test.ps1  scrape_charts.py  start_cloudflared.ps1  start_cloudflared_detached.py  start_hidden.ps1  start_tunnel.ps1  start_tunnel_detached.py
scripts/windows/: install-shortcuts.ps1
src/music_analytics/: __init__.py  analyzer.py  config.py  history.py  models.py  scheduler.py  scraper.py  visualizer.py
src/templates/: index.html  music_player.html
static/: player-core.js  song-detail-modal.js  spotify-official-player.js  theme-manager.js
templates/: index.html  music_player.html
tests/: test_analyzer.py  test_app_routes.py  test_config.py  test_export.py  test_favorites.py  test_frontend_player.py  test_history.py  test_history_extra.py  test_models_extra.py  test_play_url.py  test_scheduler.py  test_scraper.py  test_scraper_extra.py  test_visualizer.py  test_visualizer_full.py
